Fix issues; Add CI
